# smfc-rs

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml
config/: smfc.toml
src/: config.rs  controller.rs  error.rs  hwmon.rs  ipmi.rs  main.rs  pid.rs  zone.rs
